fix(platform-browser): adiciona margens laterais na caixa de login

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -4,10 +4,10 @@
   <p-card 
     header="Bem-vindo(a) ao Vault!" 
     styleClass="p-shadow-10" 
-    [style]="{ width: '400px', background: '#1A170F' }">
+    [style]="{ width: '400px', background: '#1A170F', marginLeft: '3%', marginRight: '3%' }">
     <div 
       class="p-fluid" 
-      style="display: flex; flex-direction: column; align-items: left; justify-content: center; gap: 0.5em; padding-bottom: 20px">
+      style="display: flex; flex-direction: column; align-items: left; justify-content: center; gap: 0.5em; padding-bottom: 20px; padding-top: 20px;">
       <div 
         class="p-field" 
         style="margin-bottom: 1.5em">
@@ -28,7 +28,7 @@
           [toggleMask]="true" 
           [feedback]="false"></p-password>
       </div>
-      <div style="display: flex; justify-content: center; align-items: center;">
+      <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 0.5em">
         <p-button 
           label="Entrar" 
           styleClass="button" 
