--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,8 +4,7 @@
 </header>
 
 <main class="content-container">
-  <div class="centralizer-wrapper" 
-       style="display: flex; justify-content: center; align-items: center; height: calc(100vh - 56px);">   
-    <router-outlet /> 
+  <div class="centralizer-wrapper">
+    <router-outlet></router-outlet>
   </div>
 </main>
