feat: implementa estrutura da página catálogo com botão de logout e a tabela com os jogos

--- a/src/app/catalogo/catalogo.html
+++ b/src/app/catalogo/catalogo.html
@@ -1,1 +1,10 @@
-<p>catalogo works!</p>
+<div style="margin-bottom: 2em; display:flex; justify-content: right">
+     <p-button 
+        label="Sair" 
+        styleClass="button"
+        (click)="sair()"></p-button>
+</div>
+
+<div class="catalogo-container">
+    <app-table-component></app-table-component>
+</div>
